<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0664b8"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

    </LinearLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:paddingStart="35dp"
            android:paddingEnd="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:counterTextColor="@color/colorPrimary"
            app:errorEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ime"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/ime"
                android:inputType="textCapSentences" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="35dp"
            android:paddingEnd="10dp"
            android:layout_marginEnd="20dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:counterTextColor="@color/colorPrimary"
            app:errorEnabled="true">



            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/prezime"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/prezime"
                android:inputType="textCapSentences" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="35dp"
            android:paddingEnd="10dp"
            android:layout_marginEnd="20dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:counterTextColor="@color/colorPrimary"
            app:errorEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/radnoMjesto"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/radno_mjesto"
                android:inputType="textCapSentences" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="35dp"
            android:paddingEnd="10dp"
            android:layout_marginEnd="20dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:counterTextColor="@color/colorPrimary"
            app:errorEnabled="true">



            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Zvanje"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/zvanje"
                android:inputType="textCapSentences" />


        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="35dp"
            android:layout_marginEnd="20dp"
            android:paddingEnd="10dp"
            app:errorEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Username"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:paddingStart="35dp"
            android:paddingEnd="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:helperText="Lozinka mora biti duljine 6-20 i mora sadržavati barem jedan broj.">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="35dp"
            android:paddingEnd="10dp"
            android:layout_marginEnd="20dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:errorEnabled="true"
            app:counterTextColor="@color/colorPrimary">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_password_repeat"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/ponovi_lozinku"
                android:inputType="textPassword" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_registriraj_se"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"

            android:background="#ffff"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/registriraj_se"
            android:textColor="#000000" />

        <ProgressBar

            android:id="@+id/loading"
            android:layout_marginTop="10dp"
            android:layout_marginStart="160dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="110dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/imate_kor_racun"
            android:textColor="#ffff" />

        <TextView
            android:id="@+id/textview_prijavi_se"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="135dp"
            android:layout_marginBottom="40dp"
            android:textSize="17sp"
            android:text="@string/prijavite_se"
            android:textColor="#ffff"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="70dp">


    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>


